# bench

./: .cursorrules  .gitattributes  .gitignore  .prettierignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  product-design-review.md  purrfect-sauteeing-pudding.md  release-please-config.json  splash.html  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: cache-cleanup.yml  ci-build.yml  release-please.yml  release.yml  security.yml
.husky/: commit-msg  pre-commit
.workbuddy/memory/: 2026-07-10.md  2026-07-13.md
docs/: AI-WORKFLOWS.md  ARCHITECTURE.md  DECISIONS.md  README.md  ROADMAP.md  START-HERE.md  UX-STANDARDS.md  app-installer-feature.md  architecture-issues.md  audit-report.md  bettertolive-reference.md  bug.md  build-troubleshooting.md  coding-standards.md  dev-prod-coexistence.md  development-workflow.md  external-login-proxy.md  feature-candidates.md  product-iteration-reference.md  refactor-terminology-store.md  refactoring-plan.md  session-manager-design-spec.md  session-manager-tech-design.md  system-settings-design-spec.md  system-settings-redesign.md
docs/bugs/: bug_app_manager.md  bug_env_detector.md  bug_quick_launch.md
docs/modules/: README.md  _bugs-template.md
docs/roadmap/: 2.0.0-release-readiness.md  2.0.0-ux-readiness.md  README.md  account-manager.md  (+12 more)
scripts/: check-rust-crates.mjs  commit-msg-check.mjs  generate-updater-json.mjs  install-hooks.mjs  pre-commit-check.mjs  setup.mjs  setup.ps1  setup.sh  write-updater-manifest.mjs
src/: App.tsx  fontsource.d.ts  main.tsx  splash.ts  styles.css  test-setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  deny.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_manager.rs  bootstrap.rs  commands.rs  dev_cleaner.rs  env_detector.rs  error.rs  file_ops.rs  lib.rs  macos_webview.rs  main.rs  menu.rs  persistence.rs  port_manager.rs  subprocess.rs  tray.rs
src-tauri/src/account_manager/: browser_storage.rs  capabilities.rs  commands.rs  crypto.rs  deep_link.rs  detection.rs  detection_legacy.rs  exclusivity.rs  mod.rs  network_proxy.rs  probe.rs  session.rs  state.rs  storage.rs  types.rs  webview.rs
src-tauri/src/account_manager/proxy/: matching.rs  mod.rs  protocol.rs
src-tauri/src/api_billing/: commands.rs  crypto.rs  detection.rs  exclusivity.rs  mod.rs  probe.rs  session.rs  state.rs  storage.rs  types.rs  webview.rs
src-tauri/src/api_billing/proxy/: auto_fill.rs  mod.rs  protocol.rs  token_extractor.rs
src-tauri/src/app_manager/: commands.rs  domain.rs  gatekeeper.rs  linux.rs  macos.rs  mod.rs  operations.rs  state.rs  types.rs  utils.rs  windows.rs
src-tauri/src/app_manager/installer/: codesign.rs  downloader.rs  extractor.rs  mod.rs  orchestrator.rs  replace.rs  running.rs  verifier.rs
src-tauri/src/app_manager/sources/: electron.rs  homebrew.rs  mac_app_store.rs  mod.rs  sparkle.rs
src-tauri/src/app_preferences/: commands.rs  storage.rs  types.rs
src-tauri/src/app_updater/: commands.rs  mod.rs  state.rs  types.rs
src-tauri/src/clean_space/: commands.rs  folder_scan.rs  mod.rs  records.rs  shell_util.rs  system_settings.rs  system_storage.rs  types.rs
src-tauri/src/command_center/: commands.rs  exec.rs  mod.rs  storage.rs  types.rs
src-tauri/src/dev_cleaner/: cleanup.rs  commands.rs  core.rs  custom_cleanup.rs  mod.rs  projects.rs  rules.rs  safe_delete.rs  scanner.rs  sizing.rs  types.rs
src-tauri/src/env_detector/: classification.rs  command_files.rs  core.rs  inventory.rs  mod.rs  node_bins.rs  paths.rs  types.rs  version.rs
src-tauri/src/net_probe/: advisor.rs  agent.rs  asn.rs  commands.rs  defaults.rs  discovery.rs  dns.rs  dnssec.rs  fake_ip.rs  fix.rs  globalping.rs  health.rs  hosts.rs  input.rs  ipv6.rs  lan_services.rs  mod.rs  mtu.rs  nat.rs  ntp.rs  offline.rs  packs.rs  pcap_diag.rs  ping.rs  pollution.rs  ports.rs  probe.rs  session.rs  sites.rs  speed.rs  summary.rs  tcp.rs  traceroute.rs  types.rs  validate.rs  whois.rs
src-tauri/src/port_manager/: commands.rs  core.rs  fingerprints.rs  mod.rs  processes.rs  system_info.rs  types.rs
src-tauri/src/sleep_inhibitor/: commands.rs  types.rs
src-tauri/src/system_settings/: browser.rs  dev_tools.rs  display.rs  dock.rs  finder.rs  helpers.rs  keyboard.rs  login_items.rs  maintenance.rs  mod.rs  network.rs  privacy.rs  quick_actions.rs  screenshot.rs  snapshot.rs  system_info.rs  system_pane.rs  system_pane_registry.rs  system_toggles.rs  types.rs
src-tauri/src/terminology/: commands.rs  data.rs  mod.rs  state.rs  storage.rs  types.rs
src-tauri/src/terminology/data/: aerospace_astrodynamics.rs  aerospace_avionics.rs  aerospace_propulsion.rs  aerospace_structures.rs  agriculture_agritech.rs  agriculture_livestock.rs  agriculture_planting.rs  agriculture_soil.rs  ai_cv.rs  ai_llm.rs  ai_ml.rs  ai_nlp.rs  ai_rl.rs  architecture_construction.rs  architecture_interior.rs  architecture_landscape.rs  architecture_structural.rs  architecture_urban.rs  art_design_film.rs  art_design_graphic.rs  art_design_industrial.rs  art_design_music.rs  art_design_ux_ui.rs  biology_botany.rs  biology_cell.rs  biology_ecology.rs  biology_genetics.rs  biology_microbiology.rs  chemistry_analytical.rs  chemistry_biochem.rs  chemistry_inorganic.rs  chemistry_organic.rs  chemistry_physical.rs  computer_algorithm.rs  computer_architecture.rs  computer_backend.rs  computer_cloud.rs  computer_compiler.rs  computer_database.rs  computer_devops.rs  (+116 more)
src-tauri/src/token_calculator/: commands.rs  mod.rs  state.rs  storage.rs  types.rs
src-tauri/src/window_theme/: commands.rs  mod.rs  types.rs
(+621 files in other folders)
