[workspace]
members = ["."]

[workspace.package]
version = "1.17.0"

[package]
name = "bench"
version.workspace = true
edition = "2021"
default-run = "bench"

[lib]
name = "bench_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37.2"
walkdir = "2"
chrono = "0.4"
dirs-next = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
base64 = "0.22"
minisign-verify = "0.2.5"
plist = "1"
async-trait = "0.1"
quick-xml = { version = "0.36", features = ["serialize"] }
serde_yaml = "0.9"
semver = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "stream"] }
sha2 = "0.10"
md5 = "0.7"
sha1 = "0.10"
ed25519-dalek = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = "0.3"
rand = "0.8"
aes-gcm = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid = { version = "1", features = ["v4"] }
url = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

[profile.release]
panic = "abort"
codegen-units = 16
lto = true
opt-level = "s"
strip = true
