[workspace]
members = ["."]

[workspace.package]
version = "1.18.0"

[package]
name = "bench"
version.workspace = true
edition = "2021"
default-run = "bench"

[lib]
name = "bench_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "macos-proxy", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
walkdir = "2"
chrono = "0.4"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
base64 = "0.22"
minisign-verify = "0.2.5"
plist = "1"
async-trait = "0.1"
quick-xml = { version = "0.41", features = ["serialize"] }
serde_yaml = "0.9"
semver = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "brotli", "stream", "socks", "query"] }
sha2 = "0.11"
md5 = "0.8"
sha1 = "0.11"
ed25519-dalek = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
futures-util = "0.3"
rand = "0.10"
aes-gcm = "0.11"
keyring = "4"
uuid = { version = "1", features = ["v4"] }
url = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

[profile.release]
panic = "abort"
codegen-units = 16
lto = true
opt-level = "s"
strip = true
