[workspace]
members = ["."]

[workspace.package]
version = "1.25.1"

[package]
name = "bench"
version.workspace = true
edition = "2021"
license = "MIT"
default-run = "bench"

[lib]
name = "bench_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "macos-proxy", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
walkdir = "2"
chrono = "0.4"
cookie = "0.18"
dirs = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
base64 = "0.22"
minisign-verify = "0.2.5"
plist = "1.10"
async-trait = "0.1"
quick-xml = { version = "0.41", features = ["serialize"] }
serde_yaml = "0.9"
semver = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "gzip", "brotli", "stream", "socks", "query"] }
sha2 = "0.11"
md5 = "0.8"
sha1 = "0.11"
ed25519-dalek = "2"
zip = { version = "8", default-features = false, features = ["deflate"] }
futures-util = "0.3"
rand = "0.10"
aes-gcm = "0.11"
keyring = "4"
uuid = { version = "1", features = ["v4"] }
url = "2"
zeroize = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
window-vibrancy = "0.6"
# 禁用 WKWebView 原生橡皮筋（overscroll bounce）时需要，版本与 Tauri 2.11.5 内部一致，
# 精确锁定避免依赖树出现第二个 objc2 副本导致类型/链接冲突。
# disable-encoding-assertions：objc2 0.6 的 msg_send! 在 debug 构建下会严格校验
# 选择器编码。我们用 msg_send! 直接发 WKWebView 的 `scrollView`/`setBounces:` 等
# objc2-web-kit 0.3.2 未生成的运行时选择器，其返回声明为裸指针 `*mut AnyObject`
# （编码为 ^），而方法实际返回对象（编码 @），debug 校验会误判 panic 并因处于
# ObjC 回调中无法 unwind 而 abort。该方法是 ABI 兼容的，仅校验误报，故关闭校验。
objc2 = { version = "=0.6.4", features = ["disable-encoding-assertions"] }
objc2-app-kit = "=0.3.2"
objc2-web-kit = "=0.3.2"
# 遍历 webview 子视图树所需（NSArray<NSView> 的正确编码，避免裸指针编码校验 panic）。
objc2-foundation = "=0.3.2"

[profile.release]
panic = "abort"
codegen-units = 16
lto = true
opt-level = "s"
strip = true
